--- a/app/globals.css
+++ b/app/globals.css
@@ -50,8 +50,9 @@ body {
   background-color: var(--gray-300);
 }
 h1 {
-  margin: 0;
-  font-size: 2.5rem;
+  margin-block-end: 2rem;
+  font-size: 2rem;
+  font-weight: 700;
   line-height: 1.2;
 }
 main {
@@ -85,17 +86,30 @@ a {
   transition: all 0.3s linear;
 
 }
-.btn:hover {
-  box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
-  background: var(--gray-200);
-  color: var(--primary-500);
-}
-
 .btn-primary {
   background: var(--primary-500);
   color: var(--gray-200);
 }
+.btn-primary:hover {
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+  background: var(--gray-200);
+  color: var(--primary-500);
+}
 .btn-secondary {
   background: var(--gray-200);
   color: var(--primary-500);
+}
+.btn-secondary:hover {
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+  background: var(--primary-500);
+  color: var(--gray-200);
+}
+.btn-accent {
+  background: var(--acc-green);
+  color: var(--primary-100);
+}
+.btn-accent:hover {
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+  background: var(--primary-100);
+  color: var(--acc-green);
 }
