--- a/app/globals.css
+++ b/app/globals.css
@@ -76,6 +76,7 @@ a {
   gap: 2rem;
   align-items: center;
 }
+
 .btn {
   border: none;
   border-radius: 0.5rem;
@@ -113,3 +114,24 @@ a {
   background: var(--primary-100);
   color: var(--acc-green);
 }
+/* Spinner for loading.js */
+.loader {
+  width: 50px;
+  height: 50px;
+  border: 5px solid var(--gray-100);
+  border-bottom-color: var(--acc-red);
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+  animation: rotation 1s linear infinite;
+}
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
