--- a/app/globals.css
+++ b/app/globals.css
@@ -119,7 +119,7 @@ a {
   width: 50px;
   height: 50px;
   border: 5px solid var(--gray-100);
-  border-bottom-color: var(--acc-red);
+  border-bottom-color: var(--acc-blue);
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
